6-APIimpl: Clean to avoid annoying things
